apps/remote_control/test/fixtures/compilation_errors/lib/compilation_errors.ex
defmodule CompilationErrors do
  def syntax_error do
    %{
  end
end
